<resources>
    <string name="app_name">GojekSample</string>
    <string name="text_retry">retry</string>
    <string name="text_something_went_wrong">Something went wrong..</string>
    <string name="text_an_alien_is_probably_blocking_your_signal">An Alien is probably blocking your signal.</string>
    <string name="text_trending">Trending</string>
    <string name="text_more">more</string>
    <string name="text_sort_by_stars">Sort by stars</string>
    <string name="text_sort_by_name">Sort by name</string>
    <string name="text_default">Default</string>
</resources>